--- a/.classpath
+++ b/.classpath
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="jar/gson-2.8.1-javadoc.jar"/>
-	<classpathentry kind="lib" path="jar/gson-2.8.1-sources.jar"/>
-	<classpathentry kind="lib" path="jar/gson-2.8.1.jar"/>
-	<classpathentry kind="lib" path="jar/libai-1.5.10-javadoc.jar"/>
-	<classpathentry kind="lib" path="jar/libai-1.5.10-sources.jar"/>
-	<classpathentry kind="lib" path="jar/libai-1.5.10.jar"/>
-	<classpathentry kind="lib" path="jar/slf4j-api-1.7.25-javadoc.jar"/>
-	<classpathentry kind="lib" path="jar/slf4j-api-1.7.25-sources.jar"/>
-	<classpathentry kind="lib" path="jar/slf4j-api-1.7.25.jar"/>
-	<classpathentry kind="lib" path="jar/slf4j-jdk14-1.7.25-javadoc.jar"/>
-	<classpathentry kind="lib" path="jar/slf4j-jdk14-1.7.25-sources.jar"/>
-	<classpathentry kind="lib" path="jar/slf4j-jdk14-1.7.25.jar"/>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="jar/telegrambots-2.3.5-jar-with-dependencies.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
