--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
 	    <version>1.7.25</version>
 	    <scope>test</scope>
 	</dependency>
+<!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
+<dependency>
+    <groupId>org.telegram</groupId>
+    <artifactId>telegrambots</artifactId>
+    <version>3.1.2</version>
+</dependency>
+
 	
   	
   </dependencies>
