--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,44 @@
 	    <version>1.7.25</version>
 	    <scope>test</scope>
 	</dependency>
-<!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
-<dependency>
-    <groupId>org.telegram</groupId>
-    <artifactId>telegrambots</artifactId>
-    <version>3.1.2</version>
-</dependency>
-
+	<!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
+	<dependency>
+	    <groupId>org.telegram</groupId>
+	    <artifactId>telegrambots</artifactId>
+	    <version>3.1.2</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.telegram/telegrambotsextensions -->
+	<dependency>
+	    <groupId>org.telegram</groupId>
+	    <artifactId>telegrambotsextensions</artifactId>
+	    <version>3.2</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.telegram/telegrambots-abilities -->
+	<dependency>
+	    <groupId>org.telegram</groupId>
+	    <artifactId>telegrambots-abilities</artifactId>
+	    <version>3.2</version>
+	</dependency>
+	
+	
+	<dependency>
+		<groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-api</artifactId>
+	    <version>2.8.2</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.8.2</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-slf4j-impl</artifactId>
+	    <version>2.8.2</version>
+	    <scope>test</scope>
+	</dependency>
+		
 	
   	
   </dependencies>
