--- a/pom.xml
+++ b/pom.xml
@@ -70,16 +70,27 @@
   	
   </dependencies>
   <build>
-    <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
+        <groupId>org.codehaus.mojo</groupId>
+          <artifactId>appassembler-maven-plugin</artifactId>
+          <version>1.1.1</version>
+          <configuration> 
+            <assembleDirectory>target</assembleDirectory> 
+            <programs>
+                <program>
+                    <mainClass>com.bot.config.Adapter</mainClass>
+                    <name>worker</name>
+                </program>
+                
+            </programs>
+          </configuration>
+          <executions>
+              <execution>
+                  <phase>package</phase><goals><goal>assemble</goal></goals>
+              </execution>            
+          </executions>
       </plugin>
     </plugins>
-  </build>
+  </build>  
 </project>
